--- a/WishList/Base.lproj/Main.storyboard
+++ b/WishList/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--My Wish View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MyWishViewController" customModule="WishList" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,114 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KoD-QT-M3R">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="107"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cng-9O-pR5">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="107"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZvD-RD-Dxa">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="107"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Katchapon Poolpipat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xu6-Nf-9B7">
+                                        <rect key="frame" x="107.5" y="104" width="159" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="cng-9O-pR5" firstAttribute="top" secondItem="KoD-QT-M3R" secondAttribute="top" id="0qi-Uo-s2G"/>
+                                    <constraint firstAttribute="bottom" secondItem="cng-9O-pR5" secondAttribute="bottom" id="JBk-0m-xzZ"/>
+                                    <constraint firstItem="ZvD-RD-Dxa" firstAttribute="leading" secondItem="KoD-QT-M3R" secondAttribute="leading" id="KHQ-py-g2S"/>
+                                    <constraint firstAttribute="bottom" secondItem="ZvD-RD-Dxa" secondAttribute="bottom" id="MNn-cI-bjs"/>
+                                    <constraint firstAttribute="trailing" secondItem="cng-9O-pR5" secondAttribute="trailing" id="UUM-lU-3Aw"/>
+                                    <constraint firstItem="cng-9O-pR5" firstAttribute="leading" secondItem="KoD-QT-M3R" secondAttribute="leading" id="VcL-Sq-oOm"/>
+                                    <constraint firstItem="Xu6-Nf-9B7" firstAttribute="top" secondItem="KoD-QT-M3R" secondAttribute="top" constant="104" id="Zmv-pO-RI9"/>
+                                    <constraint firstAttribute="height" constant="107" id="rDK-Do-Jnf"/>
+                                    <constraint firstItem="Xu6-Nf-9B7" firstAttribute="centerX" secondItem="KoD-QT-M3R" secondAttribute="centerX" id="rMF-kN-3Ig"/>
+                                    <constraint firstAttribute="trailing" secondItem="ZvD-RD-Dxa" secondAttribute="trailing" id="s2h-MD-OUe"/>
+                                    <constraint firstItem="ZvD-RD-Dxa" firstAttribute="top" secondItem="KoD-QT-M3R" secondAttribute="top" id="wrm-fP-JCw"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MqM-8I-ZY3">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="w7A-Ua-Zhq">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="213"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="ZHp-iL-17b">
+                                            <rect key="frame" x="8" y="79" width="69" height="69"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="69" id="YhC-pl-7Lm"/>
+                                                <constraint firstAttribute="width" constant="69" id="aVs-QH-Hqz"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Katchapon Poolpipat" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NLb-uL-Vdn">
+                                            <rect key="frame" x="8" y="156" width="224" height="22"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
+                                            <color key="textColor" red="0.16078431369999999" green="0.1843137255" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="@gooddymail" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kXN-TN-aMC" userLabel="TwitterUsername">
+                                            <rect key="frame" x="8" y="178" width="128" height="21"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                            <color key="textColor" red="0.40000000000000002" green="0.41960784309999999" blue="0.49803921569999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GSc-nT-j7z">
+                                            <rect key="frame" x="0.0" y="207" width="375" height="6"/>
+                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="1" id="R8P-zt-5rZ"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="GSc-nT-j7z" secondAttribute="trailing" id="0Tt-2g-F3x"/>
+                                        <constraint firstItem="NLb-uL-Vdn" firstAttribute="top" secondItem="ZHp-iL-17b" secondAttribute="bottom" constant="8" id="8Zk-cv-5cc"/>
+                                        <constraint firstItem="GSc-nT-j7z" firstAttribute="leading" secondItem="w7A-Ua-Zhq" secondAttribute="leading" id="EbN-dr-eWa"/>
+                                        <constraint firstItem="kXN-TN-aMC" firstAttribute="top" secondItem="NLb-uL-Vdn" secondAttribute="bottom" id="Lb5-jD-nhB"/>
+                                        <constraint firstItem="ZHp-iL-17b" firstAttribute="leading" secondItem="w7A-Ua-Zhq" secondAttribute="leading" constant="8" id="Ngu-9d-jv6"/>
+                                        <constraint firstItem="kXN-TN-aMC" firstAttribute="leading" secondItem="w7A-Ua-Zhq" secondAttribute="leading" constant="8" id="hMy-6u-yOE"/>
+                                        <constraint firstItem="ZHp-iL-17b" firstAttribute="top" secondItem="w7A-Ua-Zhq" secondAttribute="top" constant="79" id="hlj-62-XYJ"/>
+                                        <constraint firstItem="NLb-uL-Vdn" firstAttribute="leading" secondItem="w7A-Ua-Zhq" secondAttribute="leading" constant="8" id="lee-Rg-9fW"/>
+                                        <constraint firstAttribute="bottom" secondItem="GSc-nT-j7z" secondAttribute="bottom" id="qsI-Ac-9lA"/>
+                                    </constraints>
+                                </view>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="MqM-8I-ZY3" secondAttribute="bottom" id="4dc-wb-qdO"/>
+                            <constraint firstItem="KoD-QT-M3R" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="8bI-PL-HQA"/>
+                            <constraint firstAttribute="trailing" secondItem="KoD-QT-M3R" secondAttribute="trailing" id="Afo-Gx-dmH"/>
+                            <constraint firstItem="KoD-QT-M3R" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="MKK-KP-vwQ"/>
+                            <constraint firstItem="MqM-8I-ZY3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="aU9-Tr-Oxb"/>
+                            <constraint firstAttribute="trailing" secondItem="MqM-8I-ZY3" secondAttribute="trailing" id="fHV-in-Qcq"/>
+                            <constraint firstItem="MqM-8I-ZY3" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="qCb-j5-MGH"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="avatarImage" destination="ZHp-iL-17b" id="0qk-TN-16c"/>
+                        <outlet property="header" destination="KoD-QT-M3R" id="qeq-S0-qL1"/>
+                        <outlet property="headerBlurImageView" destination="ZvD-RD-Dxa" id="Gqx-Tu-xbN"/>
+                        <outlet property="headerImageView" destination="cng-9O-pR5" id="ohE-fE-cRc"/>
+                        <outlet property="headerNameLabel" destination="Xu6-Nf-9B7" id="oNp-OF-8ZK"/>
+                        <outlet property="mainNameLabel" destination="NLb-uL-Vdn" id="PJw-52-WF4"/>
+                        <outlet property="tableView" destination="MqM-8I-ZY3" id="MfL-nK-Me2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-231.19999999999999" y="108.39580209895054"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="profile" width="480" height="480"/>
+    </resources>
 </document>
